Add benchmark mode to hybrid-search command with detailed metrics
- Add --benchmark option for running hybrid search with p50/p95/p99 latencies
- Add --iterations and --warmup options for configurable benchmark runs
- Use HdrHistogram for accurate latency percentile calculations
- Update BENCHMARK_SUMMARY.md with new hybrid search benchmark results:
  - fuzzy_name_search: 2.81ms avg, 356.3 ops/sec
  - phonetic_name_search: 10.31ms avg, 97.0 ops/sec
  - hybrid_name_search: 13.92ms avg, 71.8 ops/sec
  - fuzzy_business_search: 3.53ms avg, 283.4 ops/sec

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>